src/styling/App.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;900&display=swap");
.App {
	font-family: "Nunito", sans-serif;
	display: grid;
}

body {
	overflow-x: hidden;
	position: relative;
	background-color: #33aa7c;
}

.swoosh {
	position: absolute;
	background-color: #242024;
	width: 60vw;
	height: 200vh;
	transform-origin: -10px -10px;
	transform: skewX(-30deg) scaleX(1.2);
	z-index: -2;
	max-height: 100%;
}

.title {
	z-index: 1;
	font-size: 160px;
	color: #33aa7c;
	margin-left: 2%;
	margin-top: 1%;
}

.title2 {
	z-index: 1;
	text-align: right;
	font-size: 160px;
	color: #242024;
	margin-right: 1vw;
	margin-top: 5%;
	font-weight: 700;
}

#projects {
	display: flex;
	flex-wrap: wrap;
	margin-top: -5%;
}

#block {
	text-align: right;
	margin-left: 50%;
	margin-right: 1vw;
	font-size: 35px;
	margin-top: -10vh;
}

/* On screens that are 992px or less, set the background color to blue */
@media only screen and (max-width: 600px) {
	/* Body {
		background-color: blue;
	} */

	.title {
		font-size: 90px;
		margin-left: 6vw;
		margin-bottom: -10px;
	}

	.swoosh {
		height: 200vh;
		width: 170vw;
	}

	.title2 {
		visibility: hidden;
		display: none;
	}

	#block {
		margin: 0px;
		text-align: center;
		font-size: 30px;
		margin-top: 90px;
		margin-left: 5vw;
		margin-right: 5vw;
		margin-bottom: 10vh;
	}

	#projects {
		margin-top: -5%;
	}
}

/* On screens that are 600px or less, set the background color to olive */
@media only screen and (max-width: 1024px) and (min-width: 600px) {
	/* Body {
		background-color: olive;
	} */

	.swoosh {
		height: 150vh;
		width: 80vw;
	}

	.title2 {
		margin-top: 3%;
		margin-right: 5vw;
		font-size: 70px;
	}

	.title {
		font-size: 110px;
		margin-left: 10px;
	}
	#block {
		margin-top: -3vh;
		margin-left: 2vh;
		margin-right: 5vw;
		margin-bottom: 8vh;
	}
}

/* @media only screen and (max-width: 1950px) and (min-width: 1024px) {
	.swoosh {
		height: 3000px;
		width: 1170px;
	}

	.title2 {
	}

	.title {
	}
	#block {
	}
} */

